Order status update & pizza record create page only for restaurant staffs

--- a/pizzaProj/templates/home/order.html
+++ b/pizzaProj/templates/home/order.html
@@ -12,6 +12,7 @@
             <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
 
+        <!-- Order Detail Card -->
         <div class="card mt-5" style="width: 18rem;">
             <img src="{{ order.pizza.image.url }}" class="card-img-top" alt="pizza-image">
             <div class="card-body">
