--- a/pizzaProj/templates/restaurant_staff/pizza_list.html
+++ b/pizzaProj/templates/restaurant_staff/pizza_list.html
@@ -4,16 +4,56 @@
 
 {% block content %}
 
-    <h1>Restaurant Staff Page: Pizza List</h1>
-
     <div class="container">
 
-        <h3 class="text-center bg-warning"
+        <div class="row d-flex justify-content-between">
+            <div class="col-7 py-3">
+                <h3>Restaurant Staff Page: Pizza List</h3>
+            </div>
+            <div class="col-2 py-3 d-flex justify-content-end">
+                <a href="{% url 'restaurantStaffApplication:createPizzaRecord' %}" class="text-white btn btn-lg btn-dark" 
+                    style="min-width: 7rem; text-decoration: none;">
+                    New Pizza
+                </a>
+            </div>
+        </div>
+
+        <h3 class="text-center"
             style="margin-top: 5rem;">
             All Pizza List - (Tabular Format)
         </h3>
 
-        
+        <table class="table table-hover table-striped"
+                style="margin: 2rem 0 5rem 0;">
+                <thead>
+                    <tr>
+                        <th scope="col">ID#</th>
+                        <th scope="col">Pizza</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Created At</th>
+                        <th scope="col">Updated At</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for pizz in pizzas %}
+                    <tr>
+                        <th scope="row"
+                            class="py-4">{{ forloop.counter }}</th>
+                        <td class="py-4">{{ pizz.name }}</td>
+                        <td class="py-4">{{ pizz.price }}</td>
+                        <td class="py-4">{{ pizz.created_at }}</td>
+                        <td class="py-4">{{ pizz.updated_at }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="5" class="text-center">
+                            Total Orders: <b> {{ total_pizza_num }} </b>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
 
     </div>
 
