--- a/pizzaProj/templates/restaurant_staff/pizza_list.html
+++ b/pizzaProj/templates/restaurant_staff/pizza_list.html
@@ -11,7 +11,8 @@
                 <h3>Restaurant Staff Page: Pizza List</h3>
             </div>
             <div class="col-2 py-3 d-flex justify-content-end">
-                <a href="{% url 'restaurantStaffApplication:createPizzaRecord' %}" class="text-white btn btn-lg btn-dark" 
+                <a href="{% url 'restaurantStaffApplication:createPizzaRecord' %}" 
+                    class="text-white btn btn-lg btn-dark" 
                     style="min-width: 7rem; text-decoration: none;">
                     New Pizza
                 </a>
