--- a/pizzaProj/templates/restaurant_staff/update_pizza_record.html
+++ b/pizzaProj/templates/restaurant_staff/update_pizza_record.html
@@ -6,13 +6,35 @@
 
     <div class="container">
 
-        <h1 class="my-2">Update Pizza Record</h1>
+        <div class="row d-flex justify-content-between align-items-center">
+            <div class="col-7 py-3">
+                <h3>Restaurant Staff Page: {{ pizza.name }} Information</h3>
+            </div>
+            <div class="col-4">
+                <div class="row">
+                    <div class="col d-flex flex-row-reverse">
+                        <a href="{% url 'restaurantStaffApplication:pizzaRecords' %}" 
+                        class="text-white btn btn-lg btn-dark py-3" 
+                            style="text-decoration: none;">
+                            Pizza List
+                        </a>
+                    </div>
+                    <div class="col-4 d-flex flex-row-reverse">
+                        <a href="{% url 'restaurantStaffApplication:deletePizzaRecord' pizza.id %}" 
+                        class="text-white btn btn-lg btn-danger py-3" 
+                            style="text-decoration: none;">
+                            Delete
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        <div class="row bg-warning">
-            <div class="col bg-secondary d-flex justify-content-center align-items-center">
+        <div class="row">
+            <div class="col d-flex justify-content-center align-items-center">
                 <form method="POST" enctype="multipart/form-data"
-                    class="bg-light p-5"
-                    style="margin: 5rem 0;">
+                    class="bg-light"
+                    style="margin: 5rem 0; padding: 5rem 10rem;">
                     {% csrf_token %}
                     <div class="mb-3">
                         <label class="form-label">{{ pizzaForm.name.label_tag }}</label>
@@ -26,14 +48,17 @@
                         <label class="form-label">{{ pizzaForm.image.label_tag }}</label>
                         {{ pizzaForm.image }}
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" 
+                        class="btn btn-lg btn-primary mt-4">Submit</button>
                 </form>
             </div>
 
-            <div class="col bg-info d-flex justify-content-center align-items-center">
-                <h1 class="text-center text-danger">
-                    Image
-                </h1>
+            <div class="col d-flex justify-content-center align-items-center">
+                <a href="" class="d-block" data-toggle="modal">
+                    <img src="{{ pizza.image.url }}" alt="Pizza" 
+                        class="card-img-top" 
+                        style="border-radius: 5px;"/>
+                </a>
             </div>
         </div>
 
